new css styles added

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <link rel="stylesheet" href="style.css/style.css">
     <link rel="stylesheet" href="style.css/container.css">
     <link rel="stylesheet" href="style.css/panel.css">
+    <link rel="stylesheet" href="style.css/screan.css">
 </head>
 
 <body class="container">
     <div class="container__calculator">
         <div class="screan">
-            <p>654654</p>
+            <p>test chars: 194,3</p>
         </div>
     
         <div class="panel">
