clearScrean function and minusButton added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="panel__classicOperation js-operation">%</button>
                 <button class="panel__classicOperation js-operation">CE</button>
                 <button class="panel__classicOperation js-clear">C</button>
-                <button class="panel__classicOperation js-operation">X</button>
+                <button class="panel__classicOperation js-operation">&leftarrow;</button>
                 <button class="panel__classicOperation js-operation">1/x</button>
                 <button class="panel__classicOperation js-operation">x^2</button>
                 <button class="panel__classicOperation js-operation">2pX</button>
@@ -57,7 +57,7 @@
                 <button class="panel__number js-numberButtons">2</button>
                 <button class="panel__number js-numberButtons">3</button>
                 <button class="panel__classicOperation js-operation">+</button>
-                <button class="panel__number js-numberButtons">+/-</button>
+                <button class="panel__number js-operation">+/-</button>
                 <button class="panel__number js-numberButtons">0</button>
                 <button class="panel__number js-numberButtons">,</button>
                 <button class="panel__classicOperation panel__classicOperation--equal js-equals">=</button>
