backspace function aded

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="panel__classicOperation js-operation">%</button>
                 <button class="panel__classicOperation js-operation">CE</button>
                 <button class="panel__classicOperation js-clear">C</button>
-                <button class="panel__classicOperation js-operation">&leftarrow;</button>
+                <button class="panel__classicOperation js-backspace">&leftarrow;</button>
                 <button class="panel__classicOperation js-operation">1/x</button>
                 <button class="panel__classicOperation js-operation">x^2</button>
                 <button class="panel__classicOperation js-operation">2pX</button>
