calculate function added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="screan__char js-mathSign"></p>
             <p class="screan__char screan__char--result js-currentNumber"></p>
         </div>
-    
+
         <div class="panel">
             <div class="panel__memoryContainer">
                 <button class="panel__memoryOperation">MC</button>
@@ -37,8 +37,8 @@
                 <button class="panel__memoryOperation">M</button>
             </div>
             <div class="panel__classicOperationContainer">
-                <button class="panel__classicOperation js-operation">%</button>
-                <button class="panel__classicOperation js-operation">CE</button>
+                <button class="panel__classicOperation js-operation">x^</button>
+                <button class="panel__classicOperation js-clearCurrentNumber">CE</button>
                 <button class="panel__classicOperation js-clear">C</button>
                 <button class="panel__classicOperation js-backspace">&leftarrow;</button>
                 <button class="panel__classicOperation js-operation">1/x</button>
@@ -59,13 +59,12 @@
                 <button class="panel__classicOperation js-operation">+</button>
                 <button class="panel__number js-operation">+/-</button>
                 <button class="panel__number js-numberButtons">0</button>
-                <button class="panel__number js-numberButtons">,</button>
+                <button class="panel__number js-numberButtons">.</button>
                 <button class="panel__classicOperation panel__classicOperation--equal js-equals">=</button>
-    
+
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
